--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,13 +2,16 @@
 	<nav>
 		<ul>
 			<li class="all-parents"><%= link_to "All Parent Organizations", parents_path, class: 'button'  %></li>
-			<li class="all-parents"><%= link_to "Distributor:All Banners",distributors_path, class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "Distribution Profile",distributors_path, class: 'button'  %></li>
 			<i>
-			<li class="all-parents"><%= link_to "Current", filtered_distributors_path(:current), class: 'button'  %></li>
-			<li class="all-parents"><%= link_to "Prospects", filtered_distributors_path(:prospect), class: 'button'  %></li>
-			<li class="all-parents"><%= link_to "Priorities", filtered_distributors_path(:priority), class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "DC Level Only", filtered_distributors_path(:no_banners), class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "Current Banners", filtered_distributors_path(:current), class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "Prospect Banners", filtered_distributors_path(:prospect), class: 'button'  %></li>
 			</i>
-			<li class="all-parents"><%= link_to "All Flavors", flavors_path, class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "All Brokerages", brokerages_path, class: 'button'  %></li>
+			<li class="all-parents"><%= link_to "All Brokers", brokers_path, class: 'button'  %></li>
+				<li class="all-parents"><%= link_to "All Flavors", flavors_path, class: 'button'  %></li>
+
 			<% if current_user_admin? %>
 				<li class="create-parent">
 					<%= link_to "Add New Retailer Parent", new_parent_path, class: 'button'  %>
@@ -16,8 +19,15 @@
 				<li class="create-parent">
 					<%= link_to "Add New Distributor", new_distributor_path, class: 'button'  %>
 				<li class="create-parent">
+					<%= link_to "Add New Brokerage", new_brokerage_path, class: 'button'  %>
+				</li>
+				<li class="create-parent">
+					<%= link_to "Add New Broker", new_broker_path, class: 'button'  %>
+				</li>
+				<li class="create-parent">
 					<%= link_to "Add New Flavor", new_flavor_path, class: 'button'  %>
 				</li>
+
 			<% end %>
 		</ul>
 	</nav>
