After Fix Filters and Add Broker Hooks
Fixed the filtering views for distribution profile. Added brokers and
ability to link to banners.

--- a/app/assets/stylesheets/elements.css.scss
+++ b/app/assets/stylesheets/elements.css.scss
@@ -46,7 +46,9 @@ a:active {
 }
 
 .distributorrow {
-  background-color: $primary-background-color;
+  background-color: white;
+  font-size: small;
+  font-style: italic;
 }
 
 .dcrow {
@@ -57,6 +59,8 @@ a:active {
 
 .bannerrow {
   background-color: white;
+  font-size: small;
+  font-style: italic;
 }
 
 a.link {
