--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,7 +7,8 @@
 			<li class="all-parents"><%= link_to "DC Level Only", filtered_distributors_path(:no_banners), class: 'button'  %></li>
 			<li class="all-parents"><%= link_to "Current Banners", filtered_distributors_path(:current), class: 'button'  %></li>
 			<li class="all-parents"><%= link_to "Prospect Banners", filtered_distributors_path(:prospect), class: 'button'  %></li>
-			</i>
+			<li class="all-parents"><%= link_to "Priority Banners", filtered_distributors_path(:priority), class: 'button'  %></li>
+				</i>
 			<li class="all-parents"><%= link_to "All Brokerages", brokerages_path, class: 'button'  %></li>
 			<li class="all-parents"><%= link_to "All Brokers", brokers_path, class: 'button'  %></li>
 				<li class="all-parents"><%= link_to "All Flavors", flavors_path, class: 'button'  %></li>
