--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header id="page-header">	
   <div id="masthead">
-		<h1>Zing Ops App</h1>
+		<h1>Zing Channel Management</h1>
 		<nav>
 			<p>
 				<% if current_user %>
