Pre Add Fields to Banner
Progress update after new forms interface and before adding additional
fields to Banner

--- a/app/assets/stylesheets/elements.css.scss
+++ b/app/assets/stylesheets/elements.css.scss
@@ -29,6 +29,16 @@ td {
     padding: 0 0 0 36px;
 }
 
+.absent { 
+    background-color: white; 
+}
+
+.present { 
+    background-color: Gray;   
+    color: white; 
+    text-align: center;
+}
+
 a {
   text-decoration: underline;
 }
