--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -14,6 +14,14 @@ fieldset {
     text-transform: capitalize;
   }
 
+  td {
+    border: none;
+    vertical-align: top;
+       &.required label {
+        font-weight: bold;
+      }
+   }
+
   ol {
     list-style: none;
     margin: 0;
