--- a/app/views/banner_promos/_promoform.html.erb
+++ b/app/views/banner_promos/_promoform.html.erb
@@ -1,72 +1,59 @@
 <%= form_for([@banner.parent, @banner, @banner_promo]) do |f| %>
   <%= render 'shared/errors', object: @banner_promo %>
+
 	<fieldset>
-	<ol>
-		<li class="required"><%= f.label "Promo Name (Required)" %><%= f.text_field :comment, :size=>"75", autofocus: true  %></li>
-		<li class="required"><%= f.label :start_date %> <%= f.date_select :start_date%></li>
-		<li class="required"><%= f.label :end_date %> <%= f.date_select :end_date %></li>
-
-		<li class="required"><%= f.label :promo_vehicle %>
-			<% BannerPromo::VEHICLES.each do |vehicle| %>
-				<table>
-					<tr>
-						<td><%= f.radio_button :promo_vehicle, vehicle %></td>
-						<td>
-							<% if @banner_promo.promo_vehicle == vehicle %>
-								<strong><font color="red"> <%= vehicle %> </strong></font>
-							<% else %>
-								<%= vehicle %> 
-							<% end %>
-						</td>
-					</tr>
-				</table>			
+		<table class="required">
+			<% (1..4).each do |i| %>  
+				<col width = "350" >
 			<% end %>
-		</li>
-		<li class="required"><%= f.label :promo_method %>
-			<% BannerPromo::METHODS.each do |method| %>
-				<table>
-					<tr>
-						<td>
-							<%= f.radio_button :promo_method, method %>
-						</td>
-						<td>
-							<% if @banner_promo.promo_method == method %>
-								<strong><font color="red"> <%= method %> </strong></font>
-							<% else %>
-								<%= method %>
-							<% end %>
-						</td>
-					</tr>
-				</table>			
-			<% end %>
-		</li>
+			
+		<tr>
+			<td colspan="2" class="required"><%= f.label "Promo Name (Required)" %><%= f.text_field :comment, size:65, autofocus: true  %></td>
+			<td class="required"><%= f.label :start_date %> <%= f.date_field :start_date%></td>
+			<td class="required"><%= f.label :end_date %> <%= f.date_field :end_date %></td>
+		</tr>
 
-		<li class="required"><%= f.label :promo_level %> <%= f.number_field :promo_level, :class => 'text_field', :step => 0.01 %></li>
+		<tr><td>&nbsp;</td></tr>
 
-		<li class="required"><%= f.label :status %>
-			<% BannerPromo::STATUS.each do |status| %>
-				<table>
-					<tr>
-						<td>
-							<%= f.radio_button :status, status %>
-						</td>
-						<td>
-							<% if @banner_promo.status == status %>
-								<strong><font color="red"> <%= status %> </strong></font>
-							<% else %>
-								<%= status %>
-							<% end %>
-
-						</td>
-					</tr>
-				</table>			
-			<% end %>
-		</li>
+		<tr>
+			<td class="required"><%= f.label :promo_vehicle %>
+				<% BannerPromo::VEHICLES.each do |vehicle| %>
+					<%= f.radio_button :promo_vehicle, vehicle %>
+					<% if @banner_promo.promo_vehicle == vehicle %>
+						<strong><font color="red"> <%= vehicle %><br/> </strong></font>
+					<% else %>
+						<%= vehicle %> <br/>
+					<% end %>
+				<% end %>
+			</td>
+			<td class="required"><%= f.label :promo_method %>
+				<% BannerPromo::METHODS.each do |method| %>
+					<%= f.radio_button :promo_method, method %>
+						<% if @banner_promo.promo_method == method %>
+							<strong><font color="red"> <%= method %> <br/></strong></font>
+						<% else %>
+							<%= method %><br/>
+						<% end %>
+				<% end %>
+			</td>
+			<td class="required"><%= f.label :promo_level %> <%= f.number_field :promo_level, :class => 'text_field', :step => 0.01 %></td>
+				<td class="required"><%= f.label :status %>
+					<% BannerPromo::STATUS.each do |status| %>
+						<%= f.radio_button :status, status %>
+						<% if @banner_promo.status == status %>
+							<strong><font color="red"> <%= status %> <br/></strong></font>
+						<% else %>
+							<%= status %><br/>
+						<% end %>
+					<% end %>
+				</td>
+			</tr>
+		</table>
 
 		<p>
 			<%= f.submit %>
 			<%= link_to 'CANCEL', parent_banner_banner_promos_path, class: 'button'%>
 		</p>
-	</fieldset>
 
+	</fieldset>
 <% end %>
