--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -1,24 +1,44 @@
-<link href="css/bootstrap.min.css" rel="stylesheet" />
-
-
-<div class ="container">
 
 <h1><%= pluralize(@parents.size, 'Parent Organization')%> </h1>
-<%= Time.now.to_s(:long) %> <br/>
 
-<ol>
-	<% @parents.order("corpname").each do |parent| %>
-		<article class="parent">
-			<header>
-			<li><%= image_for(parent) %>
-				<strong>
-					<%= link_to(parent.corpname, parent) %>
-				</strong> | 
-					<%= pluralize(parent.store_count, 'store') %>
-			</li>
+<table>
+<col width = "200">  
+<col width = "50" >
+<% (1..12).each do |i| %>  
+	<col width = "12" >
+<% end %>
+<tr class="bannerrow">
+	<td>left box </td>
+	<td>2nd box </td>
+	<% (1..1).each do |i| %>  
+	<td colspan="52" align="center">2016</td>
 	<% end %>
-	</header>
-	</article>
-</ol>
+</tr>
+<tr class="bannerrow">
+	<td>left box </td>
+	<td>2nd box </td>
+	<% (1..4).each do |i| %>  
+	<td colspan="13" align="center"><%= i %>Q</td>
+	<% end %>
+</tr>
+<tr class="bannerrow">
+	<td>left box </td>
+	<td>2nd box </td>
+	<% (1..52).each do |i| %>  
+	<td><%= i %></td>
+	<% end %>
+</tr>
+</table>
 
-</div>
+	<% @parents.each do |parent| %>
+		[<%= parent.channel_segment[0,1] %>] 
+		<strong><%= link_to(parent.corpname, parent) %></strong> | 
+		<%= pluralize(parent.banners_count, 'banner') %> </br>
+
+			<% parent.banners.each do |banner| %>
+				
+					<%= link_to(banner.banner_name, parent_banner_path(parent,banner)) %>
+				</br>	
+			<% end %>		
+
+	<% end %>
